fixed compile errors after cherry-picking